# tensorflow

tensorflow/lite/experimental/microfrontend/lib/: fft.cc
tensorflow/lite/kernels/internal/: max.h  min.h
tensorflow/lite/micro/examples/magic_wand/zephyr_riscv/: prj.conf
tensorflow/lite/micro/examples/magic_wand/zephyr_riscv/src/: accelerometer_handler.cc  accelerometer_handler.h  assert.cc
tensorflow/lite/micro/examples/micro_speech/: Makefile.inc  main_functions.cc  recognize_commands.cc  recognize_commands.h  train_speech_model.ipynb
tensorflow/lite/micro/examples/micro_speech/micro_features/: micro_model_settings.cc  micro_model_settings.h  tiny_conv_micro_features_model_data.cc
tensorflow/lite/micro/examples/micro_speech/simple_features/: tiny_conv_simple_features_model_data.cc
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/: CMakeLists.txt  Makefile.inc  prj.conf
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/board/: litex_vexriscv.overlay
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/boards/: litex_vexriscv.overlay
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/cmake_sub/kiss_fft/: CMakeLists.txt
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/cmake_sub/micro_features/: CMakeLists.txt
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/cmake_sub/micro_speech/: CMakeLists.txt
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/cmake_sub/microfrontend/: CMakeLists.txt
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/cmake_sub/simple_features/: CMakeLists.txt
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/cmake_sub/tf_sources/: CMakeLists.txt
tensorflow/lite/micro/examples/micro_speech/zephyr_riscv/src/: CMakeLists.txt  assert.cc  assistant_services.cc  assistant_services.h  audio_provider.cc  command_responder.cc
tensorflow/lite/micro/tools/make/: third_party_downloads.inc
tensorflow/lite/micro/tools/make/targets/: litex_vexriscv_makefile.inc
